--- a/properties/dev.properties
+++ b/properties/dev.properties
@@ -4,7 +4,7 @@
 # The script that abides by the multi-language protocol. This script will
 # be executed by the MultiLangDaemon, which will communicate with this script
 # over STDIN and STDOUT according to the multi-language protocol.
-executableName = bin/boot
+executableName = bin/boot.dev
 
 # The name of an Amazon Kinesis stream to process.
 streamName = astronomer
@@ -12,7 +12,7 @@ streamName = astronomer
 # Used by the KCL as the name of this application. Will be used as the name
 # of an Amazon DynamoDB table which will store the lease and checkpoint
 # information for workers with this application name
-applicationName = astronomer-kinesis-ingestion-tracking-prod
+applicationName = astronomer-kinesis-ingestion-tracking-dev
 
 # Users can change the credentials provider the KCL will use to retrieve credentials.
 # The DefaultAWSCredentialsProviderChain checks several other providers, which is
@@ -38,7 +38,7 @@ regionName = us-east-1
 # will be regarded as having problems and it's shards will be assigned to other workers.
 # For applications that have a large number of shards, this msy be set to a higher number to reduce
 # the number of DynamoDB IOPS required for tracking leases
-failoverTimeMillis = 30000
+#failoverTimeMillis = 10000
 
 # A worker id that uniquely identifies this worker among all workers using the same applicationName
 # If this isn't provided a MultiLangDaemon instance will assign a unique workerId to itself.
@@ -48,10 +48,10 @@ failoverTimeMillis = 30000
 #shardSyncIntervalMillis = 60000
 
 # Max records to fetch from Kinesis in a single GetRecords call.
-maxRecords = 5000
+#maxRecords = 10000
 
 # Idle time between record reads in milliseconds.
-idleTimeBetweenReadsInMillis = 2000
+#idleTimeBetweenReadsInMillis = 1000
 
 # Enables applications flush/checkpoint (if they have some data "in progress", but don't get new data for while)
 #callProcessRecordsEvenForEmptyRecordList = false
