--- a/properties/dev.properties
+++ b/properties/dev.properties
@@ -7,12 +7,12 @@
 executableName = node -r dotenv/config lib/index.js
 
 # The name of an Amazon Kinesis stream to process.
-streamName = astronomer
+streamName = astronomer-main-dev
 
 # Used by the KCL as the name of this application. Will be used as the name
 # of an Amazon DynamoDB table which will store the lease and checkpoint
 # information for workers with this application name
-applicationName = astronomer-kinesis-ingestion-tracking-dev
+applicationName = ingestion-tracking-worker-dev
 
 # Users can change the credentials provider the KCL will use to retrieve credentials.
 # The DefaultAWSCredentialsProviderChain checks several other providers, which is
