--- a/properties/prod.properties
+++ b/properties/prod.properties
@@ -7,12 +7,12 @@
 executableName = node lib/index.js
 
 # The name of an Amazon Kinesis stream to process.
-streamName = astronomer
+streamName = astronomer-main
 
 # Used by the KCL as the name of this application. Will be used as the name
 # of an Amazon DynamoDB table which will store the lease and checkpoint
 # information for workers with this application name
-applicationName = astronomer-kinesis-ingestion-tracking-prod
+applicationName = ingestion-tracking-worker
 
 # Users can change the credentials provider the KCL will use to retrieve credentials.
 # The DefaultAWSCredentialsProviderChain checks several other providers, which is
@@ -26,7 +26,7 @@ processingLanguage = nodejs/8.0.0
 
 # Valid options at TRIM_HORIZON or LATEST.
 # See http://docs.aws.amazon.com/kinesis/latest/APIReference/API_GetShardIterator.html#API_GetShardIterator_RequestSyntax
-initialPositionInStream = LATEST
+initialPositionInStream = TRIM_HORIZON
 
 # The following properties are also available for configuring the KCL Worker that is created
 # by the MultiLangDaemon.
