--- a/properties/prod.properties
+++ b/properties/prod.properties
@@ -22,7 +22,7 @@ AWSCredentialsProvider = DefaultAWSCredentialsProviderChain
 
 # Appended to the user agent of the KCL. Does not impact the functionality of the
 # KCL in any other way.
-processingLanguage = nodejs/8.0.0
+processingLanguage = nodejs/8.1.2
 
 # Valid options at TRIM_HORIZON or LATEST.
 # See http://docs.aws.amazon.com/kinesis/latest/APIReference/API_GetShardIterator.html#API_GetShardIterator_RequestSyntax
@@ -48,10 +48,10 @@ failoverTimeMillis = 30000
 #shardSyncIntervalMillis = 60000
 
 # Max records to fetch from Kinesis in a single GetRecords call.
-maxRecords = 5000
+maxRecords = 10000
 
 # Idle time between record reads in milliseconds.
-idleTimeBetweenReadsInMillis = 2000
+# idleTimeBetweenReadsInMillis = 2000
 
 # Enables applications flush/checkpoint (if they have some data "in progress", but don't get new data for while)
 #callProcessRecordsEvenForEmptyRecordList = false
