--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "kcl-bootstrap -e -p properties/dev.properties -j /usr/bin/java",
+    "lint": "eslint lib/",
     "start": "kcl-bootstrap -e -p properties/prod.properties -j /usr/bin/java",
     "test": "mocha test/index.test.js",
     "test-watch": "mocha -w test/index.test.js"
@@ -15,9 +16,11 @@
     "@astronomer/bunyan-udp": "^1.0.0",
     "@astronomer/kinesis-consumer": "^6.0.0",
     "@astronomerio/astronomer-logger": "^2.0.0",
+    "async": "^2.4.1",
     "aws-kcl": "^0.6.0",
     "bunyan": "^1.8.10",
     "dotenv": "^4.0.0",
+    "promise-retry": "^1.1.1",
     "segmentio-facade": "^3.2.0"
   },
   "devDependencies": {
