--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "^2.4.1",
     "aws-kcl": "^0.6.0",
     "bunyan": "^1.8.10",
+    "bunyan-logstash-tcp": "^1.0.0",
     "dotenv": "^4.0.0",
     "promise-retry": "^1.1.1",
     "segmentio-facade": "^3.2.0"
