--- a/package.json
+++ b/package.json
@@ -14,13 +14,9 @@
   "license": "MIT",
   "dependencies": {
     "@astronomer/kinesis-consumer": "^6.0.0",
-    "async": "^2.4.1",
     "aws-kcl": "^0.6.0",
     "bunyan": "^1.8.10",
-    "bunyan-logstash-tcp": "^1.0.0",
-    "dotenv": "^4.0.0",
-    "promise-retry": "^1.1.1",
-    "segmentio-facade": "^3.2.0"
+    "dotenv": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
