--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async": "^2.5.0",
     "aws-kcl": "^0.6.0",
+    "aws-kinesis-writable": "^2.0.0",
     "bunyan": "^1.8.10",
     "dotenv": "^4.0.0",
     "promise-retry": "^1.1.1"
